syntax = "proto3";

package auth_proto;

option go_package = "github.com/KonstantinGasser/datalab/service.user.auth.agent/cmd/grpcserver/proto";
import "common/common.proto";

service UserAuthentication {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc IsAuthed(IsAuthedRequest) returns (IsAuthedResponse) {}
    rpc AddAppAccess(AddAppAccessRequest) returns (AddAppAccessResponse) {} 
}

message RegisterRequest {
    string tracing_ID = 1;
    string username = 2;
    string password = 3;
    string organisation = 4;
}
message RegisterResponse {
    int32 status_code = 1;
    string msg = 2;
    string user_uuid = 3;
}

message LoginRequest {
    string tracing_ID = 1;
    string username = 2; 
    string password = 3;
}
message LoginResponse {
    int32 status_code = 1;
    string msg = 2;
    string access_token = 3;
}

message IsAuthedRequest {
    string tracing_ID = 1;
    string access_token = 2;
}
message IsAuthedResponse {
    int32 status_code = 1;
    string msg = 2;
    bool is_authed = 3;
    common.AuthedUser authed_user = 4;
}

message AddAppAccessRequest {
    string tracing_ID = 1;
    string user_uuid = 2;
    string app_uuid = 3;
    common.AppRole app_role = 4;
}
message AddAppAccessResponse {
    int32 status_code = 1; 
    string msg = 2;
}

